--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             </div>
         </section>
         <p>
-            @bakadra - Todos os direitos reservados 
+            @Willian Dos Santos - Todos os direitos reservados 
         </p>
     </footer>
     <a href="#home" class="home"></a>
